--- a/index.html
+++ b/index.html
@@ -19,46 +19,72 @@
             <img src="img/logo-small.png" alt="logo">
             <div class="link-container">
                 <ul>
-                    <li>Perchè Dropbox</li>
-                    <li> Funzioni</li>
-                    <li>Piani e Prezzi</li>
+                    <li class="hvr-li">Perchè Dropbox</li>
+                    <li class="hvr-li"> Funzioni</li>
+                    <li class="hvr-li">Piani e Prezzi</li>
                 </ul>
             </div>
             <div class="link-container-1">
                 <ul>
-                    <li>Supporto</li>
-                    <li>Controllo Vendite</li>
-                    <li>Accedi</li>
+                    <li class="hvr-li">Supporto</li>
+                    <li class="hvr-li">Controllo Vendite</li>
+                    <li class="hvr-li">Accedi</li>
                 </ul>
             </div>
             <div class="start-container">
                 <button>Inizia</button>
             </div>
         </nav>
+
+    </header>
+
+    <section class="sec1">
         <div class="container ">
-            <h1 class="sec1">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <h1 class="title1">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             <div class="row">
-                <div class="col col-2-1 ">
-                    
+                <div>
+
                     <p class="par1">
-                        Finalmente tutti i tuoi strumenti,contenuti e collaboratori 
+                        Finalmente tutti i tuoi strumenti,contenuti e collaboratori
                         sono accessibili dallo stesso posto.
-                        Dropbox Business è pi di uno spazip di archiviazione sicuro: è un modo intelligente e 
+                        Dropbox Business è pi di uno spazio di archiviazione sicuro: è un modo intelligente e
                         integrato per ottimizzare il flusso di lavoro
                     </p>
                     <div class="hr-btn" style="text-align: center;">
                         <button>Inizia la tua prova gratuita</button>
                     </div>
-                    <div style="text-align:center"><i class="fa-solid fa-arrow-down"></i></div>
+                    <p class="p4">Annulla in qualsiasi momento</p>
+                    <div><i class="fa-solid fa-arrow-down"></i>
+                    </div>
                 </div>
-                <div class="col col-2-1">
+                <div>
                     <img class="img1" src="img/jumbo.png" alt="">
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="sec2">
+        <h2 class="title2"> Trova il piano business che fa per te</h2>
+        <div style="padding-left:1rem;"> <input type="radio">Fatturazione mensile 
+            <span style="color:white;">------------------</span> <input type="radio">Fatturazione annuale</div>
+        
+            <div class="row1">
+            <div class="col1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sit rem tempore, quos veniam dicta impedit praesentium maiores eveniet rerum eos iusto aliquam fugiat harum numquam reprehenderit sint sunt quibusdam.
+            Repellat, asperiores vel. Architecto earum accusamus quas ratione esse, quia expedita error id pariatur vel corrupti, aliquam similique a eos. Ad odio totam tempore reprehenderit ea sit ipsa rerum delectus.
+            Ipsa, deserunt quam? Fuga, ea? Tempore porro officia quis suscipit exercitationem a ex eaque, tenetur cum! Mollitia fugiat corrupti, numquam animi modi pariatur maiores voluptas provident adipisci ipsa voluptates earum.
+            Fuga, repellat totam commodi vero sit iure recusandae, ut corporis quasi sapiente aperiam cumque nesciunt ullam impedit adipisci reiciendis? Dolores cum rerum corrupti consectetur explicabo accusantium alias minima beatae numquam?</div>
+            <div class="col2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi consequuntur excepturi assumenda tenetur non, nulla officiis quibusdam fuga obcaecati dolorum cumque nam in error laborum adipisci saepe reprehenderit, voluptas accusamus.
+            Ratione, culpa, repellat minima rem, ab et ipsa iure neque quisquam aperiam ut eos reiciendis fuga animi voluptate? Omnis eius sunt blanditiis culpa cum ullam consectetur deserunt totam aliquid animi.
+            Aliquam sapiente quo minima iure, quaerat assumenda saepe molestiae corrupti eos minus nulla quod eligendi quidem similique ratione optio animi sint fugit beatae repudiandae recusandae distinctio, asperiores incidunt! Cum, ratione.
+            Quia suscipit sit quasi veniam excepturi fugiat optio vero! Aliquam quasi voluptates, tempora doloribus autem doloremque et repellendus. Sit necessitatibus, rerum aliquam ipsam vero quod beatae magni laboriosam libero modi?</lore>
+            </div>
+            <div class="col3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, magnam, aut asperiores corrupti numquam ullam saepe sapiente exercitationem, ut qui odio iste facere eveniet doloremque adipisci fugit eum? Excepturi, voluptatibus!
+            Sequi laudantium nemo amet qui, modi aliquid libero, velit similique dolore ex quia magnam quas nam consequuntur eligendi soluta possimus hic non voluptates tempore ad quis? Ad voluptatem qui deserunt!
+            Modi, repudiandae voluptatem temporibus ullam quas, nulla nisi recusandae esse dolore sed necessitatibus! Molestias, facere voluptate nam corrupti ipsum animi id vero esse quod rerum perferendis eligendi magnam sapiente eaque!
+            Deserunt, a saepe! Reiciendis ducimus delectus mollitia nulla reprehenderit dolorem, nostrum, nesciunt fugit consectetur unde dolores iure non. Quam iusto rerum cum quae ullam ad itaque officiis assumenda voluptas dolor!</div>
+        </div>
 
-    </header>
-
-
+    </section>
 
 </body>
 
