--- a/index.html
+++ b/index.html
@@ -65,23 +65,126 @@
     </section>
     <section class="sec2">
         <h2 class="title2"> Trova il piano business che fa per te</h2>
-        <div style="padding-left:1rem;"> <input type="radio">Fatturazione mensile 
-            <span style="color:white;">------------------</span> <input type="radio">Fatturazione annuale</div>
-        
-            <div class="row1">
-            <div class="col1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sit rem tempore, quos veniam dicta impedit praesentium maiores eveniet rerum eos iusto aliquam fugiat harum numquam reprehenderit sint sunt quibusdam.
-            Repellat, asperiores vel. Architecto earum accusamus quas ratione esse, quia expedita error id pariatur vel corrupti, aliquam similique a eos. Ad odio totam tempore reprehenderit ea sit ipsa rerum delectus.
-            Ipsa, deserunt quam? Fuga, ea? Tempore porro officia quis suscipit exercitationem a ex eaque, tenetur cum! Mollitia fugiat corrupti, numquam animi modi pariatur maiores voluptas provident adipisci ipsa voluptates earum.
-            Fuga, repellat totam commodi vero sit iure recusandae, ut corporis quasi sapiente aperiam cumque nesciunt ullam impedit adipisci reiciendis? Dolores cum rerum corrupti consectetur explicabo accusantium alias minima beatae numquam?</div>
-            <div class="col2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi consequuntur excepturi assumenda tenetur non, nulla officiis quibusdam fuga obcaecati dolorum cumque nam in error laborum adipisci saepe reprehenderit, voluptas accusamus.
-            Ratione, culpa, repellat minima rem, ab et ipsa iure neque quisquam aperiam ut eos reiciendis fuga animi voluptate? Omnis eius sunt blanditiis culpa cum ullam consectetur deserunt totam aliquid animi.
-            Aliquam sapiente quo minima iure, quaerat assumenda saepe molestiae corrupti eos minus nulla quod eligendi quidem similique ratione optio animi sint fugit beatae repudiandae recusandae distinctio, asperiores incidunt! Cum, ratione.
-            Quia suscipit sit quasi veniam excepturi fugiat optio vero! Aliquam quasi voluptates, tempora doloribus autem doloremque et repellendus. Sit necessitatibus, rerum aliquam ipsam vero quod beatae magni laboriosam libero modi?</lore>
+        <div style="padding-left:1rem;"> <input type="radio">Fatturazione mensile
+            <span style="color:white;">------------------</span> <input type="radio">Fatturazione annuale
+        </div>
+
+        <div class="row1">
+            <div class="col1">
+                <div class="user"> <i class="fa-solid fa-user"></i> singolo</div>
+                <h3 style="padding:1rem 0 ;"> Professional</h3>
+                <h5> $12,00</h5>
+                <h6>/mese</h6>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-user"></i> </div>
+                    <div>1 utente</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-folder"></i></div>
+                    <div> 5 TB di spazio di archviazione sicuro</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-share-nodes"></i></div>
+                    <div> Funzioni di produttività premium e condivisione file semplice</div>
+                </div>
+                <div class="sec2-btn" style="text-align: center;">
+                    <button>Prova gratis per 30 giorni</button>
+                </div>
+                <div>oppure <a href="www.google.com">acquista ora</a></div>
+                <span style="color:white;">------------------</span>
+                <span style="color:white;">------------------</span>
+                <span style="color:white;">------------------</span>
+                <div style="color:rgb(216, 213, 213)"> _________</div>
+
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-check"></i> </div>
+                    <div>Invia fino a 100 GB con Dropbox Transfert</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-check"></i></div>
+                    <div>Cartelle offline su dispositivi mobili</div>
+                </div>
             </div>
-            <div class="col3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, magnam, aut asperiores corrupti numquam ullam saepe sapiente exercitationem, ut qui odio iste facere eveniet doloremque adipisci fugit eum? Excepturi, voluptatibus!
-            Sequi laudantium nemo amet qui, modi aliquid libero, velit similique dolore ex quia magnam quas nam consequuntur eligendi soluta possimus hic non voluptates tempore ad quis? Ad voluptatem qui deserunt!
-            Modi, repudiandae voluptatem temporibus ullam quas, nulla nisi recusandae esse dolore sed necessitatibus! Molestias, facere voluptate nam corrupti ipsum animi id vero esse quod rerum perferendis eligendi magnam sapiente eaque!
-            Deserunt, a saepe! Reiciendis ducimus delectus mollitia nulla reprehenderit dolorem, nostrum, nesciunt fugit consectetur unde dolores iure non. Quam iusto rerum cum quae ullam ad itaque officiis assumenda voluptas dolor!</div>
+
+
+            <div class="col1">
+                <div class="user"> <i class="fa-solid fa-user"></i> singolo</div>
+                <h3 style="padding:1rem 0 ;"> Professional</h3>
+                <h5> $12,00</h5>
+                <h6>/mese</h6>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-user"></i> </div>
+                    <div>1 utente</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-folder"></i></div>
+                    <div> 5 TB di spazio di archviazione sicuro</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-share-nodes"></i></div>
+                    <div> Funzioni di produttività premium e condivisione file semplice</div>
+                </div>
+                <div class="sec2-btn" style="text-align: center;">
+                    <button>Prova gratis per 30 giorni</button>
+                </div>
+                <div>oppure <a href="www.google.com">acquista ora</a></div>
+                <span style="color:white;">------------------</span>
+                <span style="color:white;">------------------</span>
+                <span style="color:white;">------------------</span>
+                <div style="color:rgb(216, 213, 213)"> _________</div>
+
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-check"></i> </div>
+                    <div>Invia fino a 100 GB con Dropbox Transfert</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-check"></i></div>
+                    <div>Cartelle offline su dispositivi mobili</div>
+                </div>
+            </div>
+
+
+            <div class="col1">
+                <div class="user"> <i class="fa-solid fa-user"></i> singolo</div>
+                <h3 style="padding:1rem 0 ;"> Professional</h3>
+                <h5> $12,00</h5>
+                <h6>/mese</h6>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-user"></i> </div>
+                    <div>1 utente</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-folder"></i></div>
+                    <div> 5 TB di spazio di archviazione sicuro</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-share-nodes"></i></div>
+                    <div> Funzioni di produttività premium e condivisione file semplice</div>
+                </div>
+                <div class="sec2-btn" style="text-align: center;">
+                    <button>Prova gratis per 30 giorni</button>
+                </div>
+                <div>oppure <a href="www.google.com">acquista ora</a></div>
+                <span style="color:white;">------------------</span>
+                <span style="color:white;">------------------</span>
+                <span style="color:white;">------------------</span>
+                <div style="color:rgb(216, 213, 213)"> _________</div>
+
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-check"></i> </div>
+                    <div>Invia fino a 100 GB con Dropbox Transfert</div>
+                </div>
+                <div class="ul-sec2">
+                    <div><i class="fa-solid fa-check"></i></div>
+                    <div>Cartelle offline su dispositivi mobili</div>
+                </div>
+            </div>
+
+
+
+
+
+
         </div>
 
     </section>
