--- a/index.html
+++ b/index.html
@@ -179,15 +179,49 @@
                     <div>Cartelle offline su dispositivi mobili</div>
                 </div>
             </div>
-
-
-
-
-
-
         </div>
+        <div class="row2">
+            <div class="sec2-rw1">
+                <i class="fa-solid fa-building"></i>Team
+            </div>
+            <div class="sec2-rw2">
+                <div class="sec2-rw3">
+                    <h3 style="padding:1rem 0 ;"> Enterprise</h3>
+                    <h5 style="padding-bottom:3rem;"> Contatta l'ufficio vendite per i prezzi</h5>
+                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su
+                        qualsiasi scala,</p>
 
+                </div>
+
+                <div class="sec2-btn" style="text-align: center;">
+                    <button>Contatta l'ufficio vendite</button>
+                </div>
+            </div>
+        </div>
     </section>
+    <section class="sec2">
+
+
+        <div class="row">
+            <div >
+                <img class="img2" src="img/partner.png" alt="">
+            </div>
+            <div class="sec3-rw1">
+                <h2 style="padding-bottom:1rem ;" >Entra in contatto con un partner Dropbox</h2>
+                <p class="par1-sec3">
+                    Finalmente tutti i tuoi strumenti,contenuti e collaboratori
+                    sono accessibili dallo stesso posto.
+                    Dropbox Business è pi di uno spazio di archiviazione sicuro: è un modo intelligente e
+                    integrato per ottimizzare il flusso di lavoro
+                </p>
+                <div class="sec3-btn" style="text-align: center;">
+                    <button>Trova un partner</button>
+                </div>
+              
+            </div>
+        </div>
+    </section>
+    
 
 </body>
 
