--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     </section>
     <section class="sec2">
         <h1 class="title1">Piu di 500 mila persone utilizzano Dropbox Business</h1>
-        <span ><a href="www.google.com">Scopri di piu sui nostri clienti</a></span>
+        <span><a href="www.google.com">Scopri di piu sui nostri clienti</a></span>
 
     </section>
     <section class="sec1">
@@ -322,75 +322,95 @@
     <section class="sec2">
         <h2 class="title2" style="text-align: left;">Domande Frequenti</h2>
         <div class="qea">
-            <h4> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced? <i class="fa-solid fa-caret-down"></i> </h4>
+            <h4> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced? <i
+                    class="fa-solid fa-caret-down"></i> </h4>
         </div>
         <div class="qea">
-            <h4> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced? <i class="fa-solid fa-caret-down"></i></h4>
+            <h4> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced? <i
+                    class="fa-solid fa-caret-down"></i></h4>
         </div>
         <div class="qea" style="border-bottom: 1px solid grey;">
-            <h4> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced? <i class="fa-solid fa-caret-down"></i></h4>
+            <h4> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced? <i
+                    class="fa-solid fa-caret-down"></i></h4>
         </div>
-        
-    </section>
-    <section class="sec6 " >
-        <div class="sec7">
-
-            <ul>
-                <li class="sec7-li"><h2>Dropbox</h2></li>
-                <li class="sec7-li"> applicazione desktop</li>
-                <li class="sec7-li">perchè Dropbox</li>
-                <li class="sec7-li">Piani</li>
-                <li class="sec7-li">Sicurezza</li>
-                <li class="sec7-li">Funzioni</li>
-            </ul>
-        </div>
-        <div class="sec7">
-
-            <ul>
-                <li class="sec7-li"><h2>Prodotti</h2></li>
-                <li class="sec7-li"> applicazione desktop</li>
-                <li class="sec7-li">perchè Dropbox</li>
-                <li class="sec7-li">Piani</li>
-                <li class="sec7-li">Sicurezza</li>
-                <li class="sec7-li">Funzioni</li>
-            </ul>
-        </div>
-        <div class="sec7">
-
-            <ul>
-                <li class="sec7-li"><h2>Azienda</h2></li>
-                <li class="sec7-li"> applicazione desktop</li>
-                <li class="sec7-li">perchè Dropbox</li>
-                <li class="sec7-li">Piani</li>
-                <li class="sec7-li">Sicurezza</li>
-                <li class="sec7-li">Funzioni</li>
-            </ul>
-        </div>
-        <div class="sec7">
-
-            <ul>
-                <li class="sec7-li"><h2>Supporto</h2></li>
-                <li class="sec7-li"> applicazione desktop</li>
-                <li class="sec7-li">perchè Dropbox</li>
-                <li class="sec7-li">Piani</li>
-                <li class="sec7-li">Sicurezza</li>
-                <li class="sec7-li">Funzioni</li>
-            </ul>
-        </div>
-        <div class="sec7">
-
-            <ul>
-                <li class="sec7-li"><h2>Community</h2></li>
-                <li class="sec7-li"> applicazione desktop</li>
-                <li class="sec7-li">perchè Dropbox</li>
-                <li class="sec7-li">Piani</li>
-                <li class="sec7-li">Sicurezza</li>
-                <li class="sec7-li">Funzioni</li>
-            </ul>
-        </div>
-
 
     </section>
+    <section class="sec6 ">
+        <div class="sec7">
+
+            <ul>
+                <li class="sec7-li">
+                    <h2>Dropbox</h2>
+                </li>
+                <li class="sec7-li"> applicazione desktop</li>
+                <li class="sec7-li">perchè Dropbox</li>
+                <li class="sec7-li">Piani</li>
+                <li class="sec7-li">Sicurezza</li>
+                <li class="sec7-li">Funzioni</li>
+            </ul>
+        </div>
+        <div class="sec7">
+
+            <ul>
+                <li class="sec7-li">
+                    <h2>Prodotti</h2>
+                </li>
+                <li class="sec7-li"> applicazione desktop</li>
+                <li class="sec7-li">perchè Dropbox</li>
+                <li class="sec7-li">Piani</li>
+                <li class="sec7-li">Sicurezza</li>
+                <li class="sec7-li">Funzioni</li>
+            </ul>
+        </div>
+        <div class="sec7">
+
+            <ul>
+                <li class="sec7-li">
+                    <h2>Azienda</h2>
+                </li>
+                <li class="sec7-li"> applicazione desktop</li>
+                <li class="sec7-li">perchè Dropbox</li>
+                <li class="sec7-li">Piani</li>
+                <li class="sec7-li">Sicurezza</li>
+                <li class="sec7-li">Funzioni</li>
+            </ul>
+        </div>
+        <div class="sec7">
+
+            <ul>
+                <li class="sec7-li">
+                    <h2>Supporto</h2>
+                </li>
+                <li class="sec7-li"> applicazione desktop</li>
+                <li class="sec7-li">perchè Dropbox</li>
+                <li class="sec7-li">Piani</li>
+                <li class="sec7-li">Sicurezza</li>
+                <li class="sec7-li">Funzioni</li>
+            </ul>
+        </div>
+        <div class="sec7">
+
+            <ul>
+                <li class="sec7-li">
+                    <h2>Community</h2>
+                </li>
+                <li class="sec7-li"> applicazione desktop</li>
+                <li class="sec7-li">perchè Dropbox</li>
+                <li class="sec7-li">Piani</li>
+                <li class="sec7-li">Sicurezza</li>
+                <li class="sec7-li">Funzioni</li>
+            </ul>
+        </div>
+
+    </section>
+    <footer>
+        <div style="color:rgb(216, 213, 213)"> _________</div>
+        <div class="row7">
+            <img class="ita-ftr" src="img/ita.png" alt="">
+            <div>Italiano <i class="fa-solid fa-chevron-down"></i></div>
+        </div>
+    </footer>
+
 
 </body>
 
